@@ -25,6 +25,8 @@ Changes in version 0.8-9 (??-??-2015)
 
 - Better handling of invalid LaTeX terms.
 
+- graph2latex gains argument 'fig.caption.short' for an optional short version of fig.caption for the list of figures.
+
 
 Changes in version 0.8-8 (03-10-2014)
 =====================================
